# BalloonFinderFramework

./: .gitignore  CMakeLists.txt  README.md
images/: README.md  balloon_positions.txt  image_data_raw.txt
include/: callback.h  gps.h  io.h  sensorParams.h
src/: GPS.cc  callback.cc  main.cc
